--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,6 +10,8 @@ jobs:
 
       - name: Setup Starknet Foundry
         uses: foundry-rs/setup-snfoundry@v4
+        with:
+          starknet-foundry-version: 0.35.1
 
       - name: Setup Scarb
         uses: software-mansion/setup-scarb@v1
