Use `--save-trace-data`

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,4 +20,4 @@ jobs:
           scarb-lock: ./Scarb.lock
 
       - name: Run tests
-        run: snforge test
+        run: snforge test --save-trace-data
